add view create y edit product

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,46 +1,48 @@
 <!-- Header -->
 <header class="header">
-  <div class="header-container">
-      <div class="header-top">
-          <div class="header-top-left">
-              <div class="burger-menu">
-                  <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
-              </div>
-          </div>
-          <div class="header__logo">
-              <a href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo">
-                  <span>CuBeats</span>
-              </a>
-              <div class="desktop-search">
-                  <form class="header-search">
-                      <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
-                      <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                  </form>
-              </div>
-          </div>
-          <div class="header-top-right">
-              <a class="header-top-right__mobileButton" href="/users/register">SIGN UP</a>
-              <nav class="header-nav-menu">
-                  <ul class="header-nav-menu__itemlist">
-                      <li class="itemlist__li"><a href="#">Categorias</a></li>
+    <div class="header-container">
+        <div class="header-top">
+            <div class="header-top-left">
+                <div class="burger-menu">
+                    <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
+                </div>
+            </div>
+            <div class="header__logo">
+                <a href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo">
+                    <span>CuBeats</span>
+                </a>
+                <div class="desktop-search">
+                    <form class="header-search">
+                        <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
+                        <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
+                </div>
+            </div>
+            <div class="header-top-right">
+                <a class="header-top-right__mobileButton" href="/users/register">SIGN UP</a>
+                <nav class="header-nav-menu">
+                    <ul class="header-nav-menu__itemlist">
+                        <li class="itemlist__li"><a href="/create-beat">Subir Beat</a></li>
+                        <li class="itemlist__li"><a href="/edit-beat">Editar Beat</a></li>
+                    </ul>
 
-                  </ul>
-                  <ul class="header-nav-menu__itemlist">
-                      <li class="itemlist__li"><a href="/users/register">Sign up</a></li>
-                      <li class="itemlist__li"><a href="/users/login"> Sign in</a></li>
-                  </ul>
-                  <ul class="header-nav-menu__itemlist">
-                      <li class="itemlist__li"><a href="/shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a>
-                      </li>
-                  </ul>
-              </nav>
-          </div>
-      </div>
-      <div class="header-bottom">
-          <form class="header-search">
-              <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
-              <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-          </form>
-      </div>
-  </div>
+
+                    <ul class="header-nav-menu__itemlist">
+                        <li class="itemlist__li"><a href="/users/register">Sign up</a></li>
+                        <li class="itemlist__li"><a href="/users/login"> Sign in</a></li>
+                    </ul>
+                    <ul class="header-nav-menu__itemlist">
+                        <li class="itemlist__li"><a href="/shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="header-bottom">
+            <form class="header-search">
+                <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
+                <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+        </div>
+    </div>
 </header>
