--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,8 @@
 @import url('general.css');
+@import url('header.css');
+@import url('createBeats.css');
 @import url('buttons.css');
 @import url('index.css');
-@import url('header.css');
-@import url('footer.css');
 @import url('shoppingCart.css');
 @import url('login.css');
 @import url('detail.css');
@@ -11,3 +11,4 @@
 @import url('slider.css');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;400;700&display=swap');
 @import url('login.css');
+@import url('footer.css');
