--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -50,6 +50,7 @@
           </div>
           <div class="card-flap flap2">
             <div class="card-actions">
+              <a href="/products/detail" class="btn"><i class="fa-solid fa-eye"></i></a>
               <a href="#" class="btn"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
           </div>
